@@ -27,6 +27,9 @@ Release 0.10.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-1320: HBaseStorageManager need to support Zookeeper Client Port.
+    (jaehwa)
+
     TAJO-1309: Add missing break point in physical operator. (jinho)
 
     TAJO-1307: HBaseStorageManager need to support for users to use
